--- a/content/resources/11-943js02.md
+++ b/content/resources/11-943js02.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Mexico City Skyline. (Image courtesy of Christian Figenschou, www.figen.com.)
-file: /media/courses/11-943j-urban-transportation-land-use-and-the-environment-spring-2002/d0b3b99c0ca705bb5066975e4c6235b9_11-943js02.jpg
+file: /courses/11-943j-urban-transportation-land-use-and-the-environment-spring-2002/d0b3b99c0ca705bb5066975e4c6235b9_11-943js02.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Mexico City Skyline. (Image courtesy of [Christian Figenschou](http://www.figen.com/).)
@@ -13,3 +13,5 @@ resourcetype: Image
 title: 11-943js02.jpg
 uid: d0b3b99c-0ca7-05bb-5066-975e4c6235b9
 ---
+Mexico City Skyline. (Image courtesy of Christian Figenschou, www.figen.com.)
+
