--- a/content/resources/11-943js02-th.md
+++ b/content/resources/11-943js02-th.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: ''
   image-alt: An aerial photo of the Mexico City skyline with haze in the distance.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-943js02-th.jpg
