--- a/content/resources/11-943js02.md
+++ b/content/resources/11-943js02.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: ''
   image-alt: An aerial photo of the Mexico City skyline with haze in the distance.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-943js02.jpg
 uid: d0b3b99c-0ca7-05bb-5066-975e4c6235b9
 ---
 Mexico City Skyline. (Image courtesy of Christian Figenschou, www.figen.com.)
-
