--- a/content/resources/11-943js02.md
+++ b/content/resources/11-943js02.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Mexico City Skyline. (Image courtesy of Christian Figenschou, www.figen.com.)
 file: /courses/11-943j-urban-transportation-land-use-and-the-environment-spring-2002/d0b3b99c0ca705bb5066975e4c6235b9_11-943js02.jpg
+file_size: 19095
 file_type: image/jpeg
 image_metadata:
   caption: Mexico City Skyline. (Image courtesy of [Christian Figenschou](http://www.figen.com/).)
