Sync all content

--- a/content/resources/11-943js02.md
+++ b/content/resources/11-943js02.md
@@ -5,7 +5,8 @@ file: /ol-ocw-studio-app/courses/11-943j-urban-transportation-land-use-and-the-e
 file_size: 19095
 file_type: image/jpeg
 image_metadata:
-  caption: Mexico City Skyline. (Image courtesy of [Christian Figenschou](http://www.figen.com/).)
+  caption: Mexico City Skyline. (Image courtesy of {{% resource_link "173a8eaa-8453-4ce4-a717-e089a219bc2f"
+    "Christian Figenschou" %}}.)
   credit: ''
   image-alt: An aerial photo of the Mexico City skyline with haze in the distance.
 learning_resource_types: []
